# MonitorDevice

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/monitordevice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  basic.h  checkdevice.cpp  checkenv.cpp  checkfrida.cpp  checkhook.cpp  checkroot.cpp  checkxposed.cpp  native-lib.cpp
app/src/main/cpp/asm/: syscall.S
app/src/main/cpp/dectection/: deviceDetection.cpp  hookDetection.cpp  jni_device.cpp  jni_hook.cpp
app/src/main/cpp/dlfcn/: local_dlfcn.cpp  local_dlfcn.h
app/src/main/cpp/include/: bionic_asm.h  config.h  deviceDetection.h  elf_util.h  hookDetection.h  local_dlfcn.h
app/src/main/cpp/utils/: basic.h  elf_util.cpp  local_dlfcn.cpp  local_dlfcn.h
app/src/main/java/com/example/checkdevice/: CpuGet.java  DeviceCheck.java  SerialGet.java  SystemGet.java
app/src/main/java/com/example/checkenv/: CloudCheck.java  EmulatorCheck.java  EnvCheck.java  SandboxCheck.java
app/src/main/java/com/example/checkfrida/: FridaCheck.java
app/src/main/java/com/example/checkhook/: FridaCheck.java  HookCheck.java  XposedCheck.java  getClassLoader.java
app/src/main/java/com/example/checkroot/: BuildCheck.java  FileCheck.java  RootCheck.java  SuCheck.java  WritePermissionCheck.java
app/src/main/java/com/example/monitordevice/: BaseActivity.java  CheckDeviceActivity.java  CheckEnvActivity.java  CheckFridaActivity.java  CheckHookActivity.java  CheckRootActivity.java  MainActivity.java
app/src/main/java/com/nuthecz/checkdevice/: CpuGet.java  DeviceCheck.java  SerialGet.java  SystemGet.java
app/src/main/java/com/nuthecz/checkenv/: CloudCheck.java  EmulatorCheck.java  EnvCheck.java  SandboxCheck.java
app/src/main/java/com/nuthecz/checkhook/: FridaCheck.java  HookCheck.java  XposedCheck.java  getClassLoader.java
app/src/main/java/com/nuthecz/checkroot/: BuildCheck.java  FileCheck.java  RootCheck.java  SuCheck.java  WritePermissionCheck.java
app/src/main/res/drawable/: button_bg.xml  ic_launcher_foreground.xml  icon_cancel.xml  icon_env.xml  icon_frida.xml  icon_hook.xml  icon_menu.xml  icon_phone.xml  icon_root.xml  output_bg.xml
app/src/main/res/layout/: activity_check_device.xml  activity_check_env.xml  activity_check_frida.xml  activity_check_hook.xml  activity_check_root.xml  activity_main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
